Fixed invalid url not showing errors and imimproved error alert box

--- a/app/assets/stylesheets/shortener.scss
+++ b/app/assets/stylesheets/shortener.scss
@@ -7,7 +7,12 @@
 	width: 555px;
 	margin: 25px 15px;
 	border-radius: 5px;
-	background-color: #ffffff;
+	background-color: #dff0d8;
+}
+
+.alert-danger {
+	width: 555px;
+	margin-top: 25px;
 }
 
 .result-box .title {
